api-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: titanicapi
  labels:
    name: titanicapi
