api-deployment-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiservice-v1
  labels:
    app: apiservice
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: apiservice
  type: NodePort
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiservice-v1
  labels:
    app: apiservice
spec:
  selector:
    matchLabels:
      app: apiservice
  replicas: 3
  template:
    metadata:
      labels:
        app: apiservice
        version: v1.0.0
    spec:
      containers:
      - name: apiservice
        image: surenraju/api-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: user-service
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 1
