api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiservice
spec:
  ports:
  - port: 8080
  selector:
    app: api-service
  clusterIP: None
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  labels:
    app: api-service
spec:
  selector:
    matchLabels:
      app: api-service
  replicas: 1
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service
        image: surenraju/api-service
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: user-service
