api-ingress-v1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apiingress
  labels:
    app: apiservice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: apiservice-v1
    servicePort: 8080
